Add credentials.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ virtual_environment/Lib
 virtual_environment/Scripts
 virtual_environment/pyvenv.cfg
 __pycache__/
-credentails.json
+credentials.json
